<resources>
    <string name="app_name">Wykrywacz Chorób</string>
    <string name="log">Login</string>
    <string name="user">Użytkownik:\n%s</string>
    <string name="hello">MENU</string>
    <string name="login">Zaloguj</string>
    <string name="logout">Wyloguj</string>
    <string name="password">Hasło</string>
    <string name="panel">Panel logowania</string>
    <string name="remember">Zapamiętaj mnie</string>
    <string name="examine">Przeprowadź badanie</string>
    <string name="database">Baza pacjentów</string>
    <string name="alldata">Podaj wszystkie dane</string>
    <string name="provideSymptoms">Podaj główne objawy pacjenta</string>
    <string name="cancel">Anuluj</string>
    <string name="confirm">Zatwierdź</string>
    <string name="diagnosis">Diagnoza</string>
    <string name="cough">Kaszel</string>
    <string name="vomiting">Wymioty</string>
    <string name="headache">Ból głowy</string>
    <string name="fever">Gorączka</string>
    <string name="dyspnoea">Duszność</string>
    <string name="chills">Dreszcze</string>
    <string name="sore_throat">Ból gardła</string>
    <string name="diarrhea">Biegunka</string>
    <string name="stomach_ache">Ból brzucha</string>
    <string name="patient_diagnose">%s prawdopodobieństwo\nzachorowania na:\n%s</string>
    <string name="high">Wysokie</string>
    <string name="medium">Średnie</string>
    <string name="low">Niskie</string>
    <string name="coronavirus">COVID-19</string>
    <string name="food_poisoning">Zatrucie pokarmowe</string>
    <string name="angina">Angina</string>
    <string name="flu">Grypa</string>
    <string name="back_to_menu">Wróć do menu</string>
    <string name="back">Wróć</string>
    <string name="add">Dodaj pacjenta\ndo bazy danych</string>
    <string name="please_only4">Zaznacz maksymalnie 4 symptomy</string>
    <string name="data_base">Baza danych pacjentów</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="age">Wiek</string>
    <string name="disease">Choroba</string>
    <string name="add_patient">Dodaj pacjenta</string>
    <string name="cannot_add">Diagnoza jest nieprecyzyjna</string>
    <string name="nullable"></string>
    <string name="no_disease">Choroba o podanych symptomach nie istnieje w bazie</string>
    <string name="delete_all">Usuń\nwszystko</string>
    <string name="please_confirm">Jesteś pewien?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="fear">Nieuzasadniony lęk</string>
    <string name="panic">Atak paniki</string>
    <string name="hypochondria">Hipochondria</string>
    <string name="cold">Przeziębienie</string>
    <string name="runny_nose">Katar</string>
    <string name="patient">%d. %s %s:</string>
    <string name="delete_selected">Usuń\nwybrane</string>
    <string name="empty">Baza danych jest pusta!</string>
    <string name="not_enough">Zaznacz więcej symptomów!</string>
    <string name="patient_introduce">Pacjent</string>
    <string name="name_introduce">Imię: %s</string>
    <string name="surname_introduce">Nazwisko: %s</string>
    <string name="age_introduce">Wiek: %d</string>
    <string name="disease_introduce">Choroba: %s</string>
    <string name="added_by_introduce">Dodany przez: %s</string>
    <string name="patientID_introduce">ID pacjenta: %d</string>
    <string name="wrong_login">Podany login nie istnieje</string>
    <string name="wrong_password">Niepoprawne hasło</string>
    <string name="registration">Rejestracja</string>
    <string name="registration_login">Podaj login</string>
    <string name="registration_password">Podaj hasło</string>
    <string name="registration_password2">Powtórz hasło</string>
    <string name="register">Zarejestruj</string>
    <string name="double_login">Podany login już istnieje</string>
    <string name="wrong_password_repeat">Niepoprawnie powtórzone hasło</string>
    <string name="registration_question">Nie masz jeszcze konta?</string>
    <string name="registration_now">Zarejestruj się</string>
    <string name="login_question">Masz już konto?</string>
    <string name="login_now">Zaloguj się</string>
    <string name="registration_confirm">Zostałeś zarejestrowany</string>
    <string name="date_added">Data dodania: %s</string>
    <string name="all_patients">Wszyscy\npacjenci</string>
    <string name="my_patients">Moi\npacjenci</string>
    <string name="wrong_age">Wiek musi być liczbą!</string>
    <string name="uncheck_all">Odznacz\nwszystko</string>
    <string name="check_all">Zaznacz\nwszystko</string>
    <string name="click_on_patient">Kliknij na pacjenta, aby wyświetlić jego dane</string>
    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>
    <string name="sex">Płeć:</string>

</resources>
