<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/health"
    tools:context=".activities.AddPatientActivity">

    <TextView
        android:id="@+id/textViewAddPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:text="@string/add_patient"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutAddPatient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddPatient">

        <EditText
            android:id="@+id/editTextAddName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextAddSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayoutSex"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#99000000"
                android:text="@string/sex"
                android:gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerSex"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:background="#99000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewAddDisease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#66000000"
            android:text="@string/disease_introduce"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonAddCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddConfirm"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAddPatient" />

    <Button
        android:id="@+id/buttonAddConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAddPatient" />

</androidx.constraintlayout.widget.ConstraintLayout>